--- a/part8/library-backend-graphql/package.json
+++ b/part8/library-backend-graphql/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.0",
-    "graphql": "^16.8.1"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.3",
+    "mongoose-unique-validator": "^5.0.0"
   }
 }
