--- a/part8/library-backend-graphql/package.json
+++ b/part8/library-backend-graphql/package.json
@@ -10,11 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@graphql-tools/schema": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.15.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "mongoose-unique-validator": "^5.0.0"
+    "mongoose-unique-validator": "^5.0.0",
+    "ws": "^8.16.0"
   }
 }
