--- a/part13/todo-app-postgres/package.json
+++ b/part13/todo-app-postgres/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index.js",
+    "migration:down" : "node util/rollback.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +19,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "umzug": "^3.7.0"
   }
 }
